# workgraph

./: CLAUDE.md  Cargo.toml  README.md  USER_FEEDBACK.md
.claude/skills/: wg.md
.workgraph/: graph.jsonl
.workgraph/agents/: alice.json
.workgraph/service/: registry.json
docs/: AGENCY.md  AGENT-GUIDE.md  AGENT-SERVICE.md  COMMANDS.md  LOGGING.md  README.md  spec-bugfixes.md
docs/design/: cycle-aware-graph.md  spec-vx-integration-impl.md  vx-integration-response.md
docs/manual/: 01-overview.typ  02-task-graph.typ  03-agency.typ  04-coordination.typ  05-evolution.typ  PLAN.md  UPDATE-SPEC.md  workgraph-manual.typ
docs/research/: cycle-detection-algorithms.md  logging-veracity-gap-analysis.md  organizational-patterns.typ  veracity-exchange-deep-dive.md
src/: agency.rs  check.rs  config.rs  cycle.rs  graph.rs  lib.rs  main.rs  matrix_commands.rs  parser.rs  provenance.rs  query.rs  usage.rs
src/commands/: abandon.rs  actor.rs  add.rs  agency_init.rs  agency_stats.rs  agent.rs  agents.rs  aging.rs  (+66 more)
test-workgraph/: hello.py  list.sh
tests/: evaluation_recording.rs  integration_agency.rs  integration_agency_edge_cases.rs  integration_agency_federation.rs  integration_auto_assignment.rs  integration_check_context.rs  integration_cli_commands.rs  integration_cli_workflows.rs  integration_error_paths.rs  integration_logging.rs  integration_loop_workflow.rs  integration_loops.rs  integration_replay_exhaustive.rs  integration_review_workflow.rs  integration_service.rs  integration_service_coordinator.rs  integration_trace_functions.rs  integration_trace_replay.rs
(+18 files in other folders)
